[package]
name = "killer-sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = "0.7.0"
csv = "1.1.6"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "sudoku_solver"
harness = false